[package]
name = "ssgithub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.14", features = ["json"] }
serde = {version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
uuid = { version = "0.8.1", features = ["v4"] } 
async-recursion = "1.0.2"
flate2 = "1.0.25"
tar = "0.4.38"
futures = "0.3.26"
